add renters, update renter card layout

--- a/themes/carlschirm/layouts/index.html
+++ b/themes/carlschirm/layouts/index.html
@@ -20,7 +20,7 @@
 			<div class="content has-text-light">
 				<h3>Standortvorteile im Gewerbepark mit historischer Bausubstanz</h3>
 				<p>Durch die perfekte Anbindung an die B27, die Nähe zum Großraum Stuttgart, insbesondere zum Flughafen Stuttgart und zur Messe Stuttgart, und die Lage direkt an der Bahnstrecke Reutlingen-Tübingen-Stuttgart ist der Gewerbepark schnell zu erreichen. Der Standort ist somit eine preisgünstige Alternative zum Großraum Stuttgart.</p>
-				<p>Arbeiten in guter Nachbarschaft heißt für uns vor allem Wohlfühlen am Standort. Seit über 20 Jahren wird versucht, den ursprünglichen Charme der ehemaligen Textilfabrik mit modernster technischer Ausstattung zu verbinden. So bieten wir Ihnen ein Ambiente, das noch das Flair des Industriezeitalters ausstrahlt, zum Beispiel in großzügigen Shedhallen mit viel Tageslicht, die hochwertig saniert wurden.</p>
+				<p>Arbeiten in guter Nachbarschaft heißt für uns vor allem Wohlfühlen am Standort. Seit über 30 Jahren verbinden wir den ursprünglichen Charme der ehemaligen Textilfabrik mit modernster technischer Ausstattung. So bieten wir Ihnen ein Ambiente, das noch das Flair des Industriezeitalters ausstrahlt, zum Beispiel in großzügigen Shedhallen mit viel Tageslicht, die hochwertig saniert wurden.</p>
 			</div>
 		</div>
 	</div>
