--- a/themes/carlschirm/static/css/carlschirm/sass/cs.scss
+++ b/themes/carlschirm/static/css/carlschirm/sass/cs.scss
@@ -70,3 +70,15 @@ nav {
 a:hover {
 	text-decoration: underline;
 }
+
+.card {
+	height: 100%;
+}
+
+.card-image {
+	padding: 10px 10px 5px 5px;
+}
+
+.is-horizontal-center {
+  justify-content: center;
+}
