add text on hero

--- a/themes/carlschirm/layouts/index.html
+++ b/themes/carlschirm/layouts/index.html
@@ -1,9 +1,11 @@
 {{ partial "header.html" . }}
 
 <section class="hero-cs is-fullheight-with-navbar">
-  <div class="hero-body">
-
-  </div>
+  	<div class="hero-body">
+  		<div class="container">
+  			<h1 class="title has-text-grey-lighter">Gewerbepark <em>Carl Schirm</em></h1>
+  		</div>
+  	</div>
 </section>
 
 <div class="section">
