implement comments magali

--- a/themes/carlschirm/layouts/shortcodes/load-photoswipe.html
+++ b/themes/carlschirm/layouts/shortcodes/load-photoswipe.html
@@ -66,9 +66,9 @@ Documentation and licence at https://github.com/liwenyip/hugo-easy-gallery/
     </button>
     <button class="pswp__button pswp__button--arrow--right" title="Nächstes Bild">
     </button>
-    <div class="pswp__caption">
+<!--     <div class="pswp__caption">
       <div class="pswp__caption__center"></div>
-    </div>
+    </div> -->
     </div>
     </div>
 </div>
