--- a/themes/carlschirm/layouts/shortcodes/load-photoswipe.html
+++ b/themes/carlschirm/layouts/shortcodes/load-photoswipe.html
@@ -12,18 +12,14 @@ Documentation and licence at https://github.com/liwenyip/hugo-easy-gallery/
 - If your template already loads jQuery in the header then you don't need to load it again here.
 - If your template already loads jQuery in the footer, then you could load load-photoswipe.js from the footer instead
 -->
-<!-- these files are loaded in the theme footer
-<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
 <script src="/js/load-photoswipe.js"></script>
--->
 
 <!-- Photoswipe css/js libraries -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.css" integrity="sha256-sCl5PUOGMLfFYctzDW3MtRib0ctyUvI9Qsmq2wXOeBY=" crossorigin="anonymous" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/default-skin/default-skin.min.css" integrity="sha256-BFeI1V+Vh1Rk37wswuOYn5lsTcaU96hGaI7OUVCLjPc=" crossorigin="anonymous" />
-<!-- these files are loaded in the theme footer
-<script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.js" integrity="sha256-UplRCs9v4KXVJvVY+p+RSo5Q4ilAUXh7kpjyIP5odyc=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe-ui-default.min.js" integrity="sha256-PWHOlUzc96pMc8ThwRIXPn8yH4NOLu42RQ0b9SpnpFk=" crossorigin="anonymous"></script>
--->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe.min.css" integrity="sha384-yX+tSqQp3yF8BiTuLLOwNyaqtmZ9yFQT7IYg7U9YU9Dz/JDlh6JJQmNClCmvYl+b" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/default-skin/default-skin.min.css" integrity="sha384-R6P/wJIrxjHcm//YCjb0S6rRgebsNn3u6U4NxVI8R03iSPAR5CwPqoq1n6U/tjFE" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe.min.js" integrity="sha384-jkeJ/ETDRD/P4Y3I3CQi1QIwrEJjR9GdAZV2/aqDwwgA5ldCNiExYJeBwKyQC/+q" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe-ui-default.min.js" integrity="sha384-HotcxRWS6/oszHPwknjGnd066fV8+ycnO5TXDcOscFWvTtaiCtEEv+9s5Qrn1iJD" crossorigin="anonymous"></script>
 
 <!-- Root element of PhotoSwipe. Must have class pswp. -->
 <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
@@ -42,34 +38,32 @@ Documentation and licence at https://github.com/liwenyip/hugo-easy-gallery/
     </div>
     <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
     <div class="pswp__ui pswp__ui--hidden">
-    <div class="pswp__top-bar">
-      <!--  Controls are self-explanatory. Order can be changed. -->
-      <div class="pswp__counter"></div>
-      <button class="pswp__button pswp__button--close" title="Schließen"></button>
-      <!-- <button class="pswp__button pswp__button--share" title="Share"></button> -->
-      <button class="pswp__button pswp__button--fs" title="Vollbild anzeigen"></button>
-      <button class="pswp__button pswp__button--zoom" title="Zoomen"></button>
-      <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
-      <!-- element will get class pswp__preloader--active when preloader is running -->
-      <div class="pswp__preloader">
-        <div class="pswp__preloader__icn">
-          <div class="pswp__preloader__cut">
-            <div class="pswp__preloader__donut"></div>
+      <div class="pswp__top-bar">
+        <!--  Controls are self-explanatory. Order can be changed. -->
+        <div class="pswp__counter"></div>
+          <button class="pswp__button pswp__button--close" title="Schließen"></button>
+          <!-- <button class="pswp__button pswp__button--share" title="Share"></button> -->
+          <button class="pswp__button pswp__button--fs" title="Vollbild anzeigen"></button>
+          <button class="pswp__button pswp__button--zoom" title="Zoomen"></button>
+        <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
+        <!-- element will get class pswp__preloader--active when preloader is running -->
+        <div class="pswp__preloader">
+          <div class="pswp__preloader__icn">
+            <div class="pswp__preloader__cut">
+              <div class="pswp__preloader__donut"></div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
     <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
       <div class="pswp__share-tooltip"></div>
     </div>
-    <button class="pswp__button pswp__button--arrow--left" title="Vorheriges Bild">
-    </button>
-    <button class="pswp__button pswp__button--arrow--right" title="Nächstes Bild">
-    </button>
-<!--     <div class="pswp__caption">
+      <button class="pswp__button pswp__button--arrow--left" title="Vorheriges Bild"></button>
+      <button class="pswp__button pswp__button--arrow--right" title="Nächstes Bild"></button>
+    <div class="pswp__caption">
       <div class="pswp__caption__center"></div>
-    </div> -->
     </div>
-    </div>
+  </div>
+</div>
 </div>
 {{ end }}
