--- a/themes/carlschirm/layouts/partials/footer.html
+++ b/themes/carlschirm/layouts/partials/footer.html
@@ -1,21 +1,21 @@
-      <footer class="footer">
-        <div class="columns">
-          <div class="column is-one-half">
-            <div class="content">
-              Carl Schirm GmbH & Co. Krüger KG
-              <br>
-              Bahnhofstraße 26
-              <br>
-              72138 Kirchentellinsfurt
-              <br>
-              <!-- replace by icons -->
-              Telefon: +49 (0)7121 60241
-              <br>
-              Telefax: +49 (0)7121 60244
-              <br>
-              Email: <a href="mailto:info@gewerberaum-carl-schirm.de">info@gewerberaum-carl-schirm.de</a>
-            </div>
+    <footer class="footer">
+      <div class="columns">
+        <div class="column is-one-half">
+          <div class="content">
+            Carl Schirm GmbH & Co. Krüger KG
+            <br>
+            Bahnhofstraße 26
+            <br>
+            72138 Kirchentellinsfurt
+            <br>
+            <!-- replace by icons -->
+            Telefon: +49 (0)7121 60241
+            <br>
+            Telefax: +49 (0)7121 60244
+            <br>
+            Email: <a href="mailto:info@carl-schirm.de">info@carl-schirm.de</a>
           </div>
+        </div>
           <div class="column is-one-quarter">
             <div class="content">
               <a href="/impressum/">Impressum</a>
@@ -36,12 +36,5 @@
         </div>
       </footer>
     </div>
-    <!-- {{ template "_internal/google_analytics.html" . }} -->
-    <!-- Load PhotoSwipe js if the load-photoswipe shortcode has been used -->
-<!--     {{ if ($.Scratch.Get "photoswipeloaded") }}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe.min.js" integrity="sha384-jkeJ/ETDRD/P4Y3I3CQi1QIwrEJjR9GdAZV2/aqDwwgA5ldCNiExYJeBwKyQC/+q" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe-ui-default.min.js" integrity="sha384-HotcxRWS6/oszHPwknjGnd066fV8+ycnO5TXDcOscFWvTtaiCtEEv+9s5Qrn1iJD" crossorigin="anonymous"></script>
-    {{ end }} -->
-    </body>
+  </body>
 </html>
