remove contact form

--- a/themes/carlschirm/layouts/kontakt/single.html
+++ b/themes/carlschirm/layouts/kontakt/single.html
@@ -24,7 +24,7 @@
         </div>
         <div class="field">
           <div class="control">
-            <button class="button is-link">Abschicken</button>
+            <button class="button is-link" type="submit">Abschicken</button>
           </div>
         </div>
       </form>
