change summaryLength setting to 50

--- a/themes/carlschirm/layouts/_default/list.html
+++ b/themes/carlschirm/layouts/_default/list.html
@@ -9,9 +9,9 @@
 			  	<h2><a href="{{.Permalink}}">{{.Title}}</a></h2>
 			  	<h6>{{.Date.Format "02.01.2006"}}</h6>
 			  	<p>	{{ .Summary }}
-					{{ if .Truncated }}
+					<!-- {{ if .Truncated }} -->
 					<a href="{{ .Permalink }}">Weiterlesen…</a>
-					{{ end }}
+					<!-- {{ end }} -->
 				</p>
 				{{ end }}
 			  	<!-- <ul>
