Text Nachhaltigkeit einpflegen, Anpassungen am Layout

--- a/themes/carlschirm/layouts/partials/nav.html
+++ b/themes/carlschirm/layouts/partials/nav.html
@@ -48,6 +48,9 @@
           <a class="navbar-item" href="/ueber-uns/">
             Über uns
           </a>
+          <a class="navbar-item" href="/nachhaltigkeit/">
+            Nachhaltigkeit
+          </a>          
           <a class="navbar-item" href="/historie/">
             Historie
           </a>
