--- a/themes/carlschirm/layouts/vermietung/single.html
+++ b/themes/carlschirm/layouts/vermietung/single.html
@@ -1,6 +1,7 @@
 {{ partial "header.html" .}}
 
 <div class="section">
+  <div class="container">
   <article class="message is-dark">
     <div class="message-header">
       <p>{{ .Title }}</p>
@@ -37,6 +38,7 @@
   	   </div>
     </div>
   </article>
+  </div>
 </div>
 
 {{ partial "footer.html" .}}
