--- a/themes/carlschirm/layouts/_default/single.html
+++ b/themes/carlschirm/layouts/_default/single.html
@@ -1,13 +1,15 @@
 {{ partial "header.html" . }}
 
 <div class="section">
-	<div class="columns">
-		<div class="column is-half is-offset-one-quarter">
-			<div class="content has-text-light ">
-				<h2>{{ .Title }}</h2>
-				<h6>{{.Date.Format "02.01.2006"}}</h4>
+	<div class="container">
+		<div class="columns">
+			<div class="column is-half is-offset-one-quarter">
+				<div class="content has-text-light ">
+					<h2>{{ .Title }}</h2>
+					<h6>{{.Date.Format "02.01.2006"}}</h4>
 				{{ .Content }}
-			</div>	
+				</div>	
+			</div>
 		</div>
 	</div>
 </div>
