--- a/themes/carlschirm/layouts/anfahrt/single.html
+++ b/themes/carlschirm/layouts/anfahrt/single.html
@@ -1,6 +1,7 @@
 {{ partial "header.html" . }}
 
 <div class="section">
+	<div class="container">
 	<div class="columns">
 		<div class="column">
 			<figure>
@@ -29,6 +30,7 @@
   				<iframe class="has-ratio" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.0821595876696!2d9.135124715520131!3d48.531657179256875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4799efc5b82d8425%3A0xb470f340c74e45c2!2sCarl%20Schirm%20GmbH%20%26%20Co.%20Kr%C3%BCger%20KG!5e0!3m2!1sde!2sch!4v1571213430991!5m2!1sde!2sch" allowfullscreen></iframe>
 			</figure>
 		</div>
+	</div>
 	</div>
 </div>
 
