--- a/themes/carlschirm/layouts/vermietung/list.html
+++ b/themes/carlschirm/layouts/vermietung/list.html
@@ -1,6 +1,7 @@
 {{ partial "header.html" .}}
 
 <div class="section">
+  <div class="container">
   <div class="columns">
     <div class="column is-two-thirds">
       <div class= "content has-text-light">
@@ -22,6 +23,7 @@
         </div>
       </div>  
     </div>
+  </div>
   </div>
 </div>
 
