add link to lageplan

--- a/themes/carlschirm/layouts/anfahrt/single.html
+++ b/themes/carlschirm/layouts/anfahrt/single.html
@@ -14,6 +14,7 @@
 				<p>...jedenfalls unter normalen Umständen.</p>
 				<p>Der Gewerbepark zeichnet sich durch seine zentrale Lage im Dreieck Stuttgart-Tübingen-Reutlingen aus. Durch die unmittelbar angrenzende B27 besteht eine gute Anbindung an den Großraum Stuttgart (Flughafen/Messe Stuttgart: ca. 20 Minuten Fahrzeit).</p>
 				<p>Der Bahnhof mit der Bahnlinie Tübingen-Reutlingen-Stuttgart ist ebenfalls in wenigen Minuten zu Fuß erreichbar.</p>
+				<p>Einen Lageplan können Sie <a href="/images/anfahrt/lageplan.pdf">hier</a> herunterladen.</p>
 			</div>
 		</div>
 	</div>
