adjust file and folder namings

--- a/themes/carlschirm/layouts/partials/nav.html
+++ b/themes/carlschirm/layouts/partials/nav.html
@@ -58,29 +58,29 @@
         </div>
       </div>
         <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" href="/historie/">
+          <a class="navbar-link" href="/historie-uebersicht/">
               Historie
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="/historie_detail/buerogebaeude/">
+            <a class="navbar-item" href="/historie/buerogebaeude/">
               Bürogebäude
             </a>
-            <a class="navbar-item" href="/historie_detail/wohnhaus/">
+            <a class="navbar-item" href="/historie/wohnhaus/">
               Wohnhaus
             </a>
-            <a class="navbar-item" href="/historie_detail/shedbau/">
+            <a class="navbar-item" href="/historie/shedbau/">
                 Shedbau
             </a>
-            <a class="navbar-item" href="/historie_detail/kesselhaus/">
+            <a class="navbar-item" href="/historie/kesselhaus/">
                 Kesselhaus
             </a>
-            <a class="navbar-item" href="/historie_detail/schlosserei/">
+            <a class="navbar-item" href="/historie/schlosserei/">
                 Schlosserei
             </a>
-            <a class="navbar-item" href="/historie_detail/hochbau/">
+            <a class="navbar-item" href="/historie/hochbau/">
                 Hochbau
             </a>
-            <a class="navbar-item" href="/historie_detail/spinnerei_shedbau/">
+            <a class="navbar-item" href="/historie/spinnerei_shedbau/">
                 Spinnerei-Shedbau
             </a>
           </div>
